--- a/package.json
+++ b/package.json
@@ -1,30 +1,33 @@
 {
-  "name": "my-react-router-app",
-  "private": true,
-  "type": "module",
-  "scripts": {
-    "build": "react-router build",
-    "dev": "react-router dev",
-    "start": "react-router-serve ./build/server/index.js",
-    "typecheck": "react-router typegen && tsc"
-  },
-  "dependencies": {
-    "@react-router/node": "^7.7.1",
-    "@react-router/serve": "^7.7.1",
-    "isbot": "^5.1.27",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-router": "^7.7.1"
-  },
-  "devDependencies": {
-    "@react-router/dev": "^7.7.1",
-    "@tailwindcss/vite": "^4.1.4",
-    "@types/node": "^20",
-    "@types/react": "^19.1.2",
-    "@types/react-dom": "^19.1.2",
-    "tailwindcss": "^4.1.4",
-    "typescript": "^5.8.3",
-    "vite": "^6.3.3",
-    "vite-tsconfig-paths": "^5.1.4"
-  }
+    "name": "my-react-router-app",
+    "private": true,
+    "type": "module",
+    "scripts": {
+        "build": "react-router build",
+        "dev": "react-router dev",
+        "start": "react-router-serve ./build/server/index.js",
+        "typecheck": "react-router typegen && tsc"
+    },
+    "dependencies": {
+        "@react-router/node": "^7.7.1",
+        "@react-router/serve": "^7.7.1",
+        "classnames": "^2.5.1",
+        "isbot": "^5.1.27",
+        "mobx": "^6.13.7",
+        "mobx-react-lite": "^4.1.0",
+        "react": "^19.1.0",
+        "react-dom": "^19.1.0",
+        "react-merge-refs": "^3.0.2",
+        "react-router": "^7.7.1",
+        "sass": "^1.89.2"
+    },
+    "devDependencies": {
+        "@react-router/dev": "^7.7.1",
+        "@types/node": "^20",
+        "@types/react": "^19.1.2",
+        "@types/react-dom": "^19.1.2",
+        "typescript": "^5.8.3",
+        "vite": "^6.3.3",
+        "vite-tsconfig-paths": "^5.1.4"
+    }
 }
