--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
         "react-dom": "^19.1.0",
         "react-merge-refs": "^3.0.2",
         "react-router": "^7.7.1",
-        "sass": "^1.89.2"
+        "sass": "^1.89.2",
+        "slate": "^0.118.0",
+        "slate-react": "^0.117.4"
     },
     "devDependencies": {
         "@react-router/dev": "^7.7.1",
