--- a/package.json
+++ b/package.json
@@ -13,21 +13,26 @@
         "@react-router/serve": "^7.7.1",
         "classnames": "^2.5.1",
         "isbot": "^5.1.27",
+        "lodash.throttle": "^4.1.1",
         "mobx": "^6.13.7",
         "mobx-react-lite": "^4.1.0",
-        "react": "^19.1.0",
-        "react-dom": "^19.1.0",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1",
+        "react-focus-lock": "^2.13.6",
         "react-merge-refs": "^3.0.2",
+        "react-popper": "^2.3.0",
         "react-router": "^7.7.1",
         "sass": "^1.89.2",
         "slate": "^0.118.0",
+        "slate-dom": "^0.117.4",
         "slate-react": "^0.117.4"
     },
     "devDependencies": {
         "@react-router/dev": "^7.7.1",
+        "@types/lodash.throttle": "^4.1.9",
         "@types/node": "^20",
-        "@types/react": "^19.1.2",
-        "@types/react-dom": "^19.1.2",
+        "@types/react": "^18.3.1",
+        "@types/react-dom": "^18.3.1",
         "typescript": "^5.8.3",
         "vite": "^6.3.3",
         "vite-tsconfig-paths": "^5.1.4"
