--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
         "sass": "^1.89.2",
         "slate": "^0.118.0",
         "slate-dom": "^0.117.4",
-        "slate-react": "^0.117.4"
+        "slate-react": "^0.117.4",
+        "wavesurfer.js": "^7.10.1"
     },
     "devDependencies": {
         "@react-router/dev": "^7.7.1",
